--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests-oauthlib = "^2.0.0"
 flask-sqlalchemy = "^3.1.1"
 werkzeug = "^3.0.4"
 replit = "^4.1.0"
+replit-object-storage = "^1.0.2"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
