--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@
       requests_oauthlib==1.3.0
       openai==1.45.0
       Werkzeug==2.0.1
-      replit
+           --no-cache-dir
+   --force-reinstall
+   replit>=3.2.5
      
